# ffmpeg_hw_mediacodec_encoder

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/pct/ffmpeg_hw_encoder/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/images/: 10_after_get_frame_param.raw  11_after_get_frame_param.raw  12_after_get_frame_param.raw  13_after_get_frame_param.raw  14_after_get_frame_param.raw  15_after_get_frame_param.raw  16_after_get_frame_param.raw  17_after_get_frame_param.raw  18_after_get_frame_param.raw  19_after_get_frame_param.raw  1_after_get_frame_param.raw  20_after_get_frame_param.raw  21_after_get_frame_param.raw  22_after_get_frame_param.raw  23_after_get_frame_param.raw  24_after_get_frame_param.raw  25_after_get_frame_param.raw  26_after_get_frame_param.raw  27_after_get_frame_param.raw  28_after_get_frame_param.raw  29_after_get_frame_param.raw  2_after_get_frame_param.raw  30_after_get_frame_param.raw  31_after_get_frame_param.raw  32_after_get_frame_param.raw  33_after_get_frame_param.raw  34_after_get_frame_param.raw  35_after_get_frame_param.raw  36_after_get_frame_param.raw  37_after_get_frame_param.raw  38_after_get_frame_param.raw  39_after_get_frame_param.raw  3_after_get_frame_param.raw  40_after_get_frame_param.raw  41_after_get_frame_param.raw  42_after_get_frame_param.raw  43_after_get_frame_param.raw  44_after_get_frame_param.raw  45_after_get_frame_param.raw  46_after_get_frame_param.raw  (+45 more)
app/src/main/cpp/: CMakeLists.txt  ffmpeg_encoder.cpp  ffmpeg_encoder.h  my_log.h  native-lib.cpp
app/src/main/cpp/cmake/modules/: FindFFmpeg.cmake
app/src/main/java/com/pct/ffmpeg_hw_encoder/: DDlog.kt  MainActivity.kt  PathTool.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/pct/ffmpeg_hw_encoder/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
